--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -7,69 +7,71 @@
 
 <div class="container">
     @{ Html.RenderPartial("_PartHeader", "Dane kursu"); }
-    <div class="row thumbnail col-md-12">
-        <div class="row form-group">
-            <div class="control-label col-md-2">
-                <strong>Nazwa</strong>
-            </div>
-            <div class="col-md-4">
-                @Html.DisplayFor(model => model.Name)
+    <div class="row">
+        <div class="bordered col-md-12">
+            <div class="row form-group">
+                <div class="control-label col-md-2">
+                    <strong>Nazwa</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.DisplayFor(model => model.Name)
+                </div>
+
+                <div class="control-label col-md-2">
+                    <strong>Poziom</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.DisplayFor(model => model.LanguageProficency.Name)
+                </div>
             </div>
 
-            <div class="control-label col-md-2">
-                <strong>Poziom</strong>
-            </div>
-            <div class="col-md-4">
-                @Html.DisplayFor(model => model.LanguageProficency.Name)
-            </div>
-        </div>
+            <div class="row form-group">
+                <div class="control-label col-md-2">
+                    <strong>Liczba godzin</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.DisplayFor(model => model.NumberOfHours)
+                </div>
 
-        <div class="row form-group">
-            <div class="control-label col-md-2">
-                <strong>Liczba godzin</strong>
-            </div>
-            <div class="col-md-4">
-                @Html.DisplayFor(model => model.NumberOfHours)
-            </div>
+                <div class="control-label col-md-2">
+                    <strong>Aktywny</strong>
+                </div>
+                <div class="col-md-4">
+                    @{
+                        string active = "nie";
 
-            <div class="control-label col-md-2">
-                <strong>Aktywny</strong>
-            </div>
-            <div class="col-md-4">
-                @{
-                    string active = "nie";
+                        if (Model.IsActive) { active = "tak"; }
+                    }
 
-                    if (Model.IsActive) { active = "tak"; }
-                }
-
-                @active
-            </div>
-        </div>
-
-        <div class="row form-group">
-            <div class="control-label col-md-2">
-                <strong>Data rozpoczęcia</strong>
-            </div>
-            <div class="col-md-4">
-                @Model.StartDate.ToString("yyyy/MM/dd")
+                    @active
+                </div>
             </div>
 
-            <div class="control-label col-md-2">
-                <strong>Data zakończenia</strong>
-            </div>
-            <div class="col-md-4">
-                @Model.EndDate.ToString("yyyy/MM/dd")
-            </div>
-        </div>
+            <div class="row form-group">
+                <div class="control-label col-md-2">
+                    <strong>Data rozpoczęcia</strong>
+                </div>
+                <div class="col-md-4">
+                    @Model.StartDate.ToString("yyyy/MM/dd")
+                </div>
 
-        <div class="row form-group">
-            <div class="col-md-6">
+                <div class="control-label col-md-2">
+                    <strong>Data zakończenia</strong>
+                </div>
+                <div class="col-md-4">
+                    @Model.EndDate.ToString("yyyy/MM/dd")
+                </div>
             </div>
-            <div class="control-label col-md-2">
-                <strong>Opis</strong>
-            </div>
-            <div class="col-md-4">
-                @Html.DisplayFor(model => model.Description)
+
+            <div class="row form-group">
+                <div class="col-md-6">
+                </div>
+                <div class="control-label col-md-2">
+                    <strong>Opis</strong>
+                </div>
+                <div class="col-md-4">
+                    @Html.DisplayFor(model => model.Description)
+                </div>
             </div>
         </div>
     </div>
@@ -102,39 +104,38 @@
     </div>
     @if (Model.Groups.Any())
     {
-        <p />
-        <div class="row col-md-12">
-            @{ Html.RenderPartial("_PartHeader", "Grupy przypisane do kursu"); }
-        </div>
-        <div class="row thumbnail col-md-12">
-            <table class="table table-striped table-bordered">
-                <tr>
-                    <th>
-                        Utworzono
-                    </th>
-                    <th>
-                        Nazwa
-                    </th>
-                    <th>
-                        Prowadzący
-                    </th>
-                </tr>
-                @foreach (var group in Model.Groups)
+        Html.RenderPartial("_PartHeader", "Grupy przypisane do kursu");
+        <div class="row">
+            <div class="bordered col-md-12">
+                <table class="table table-striped table-bordered">
+                    <tr>
+                        <th>
+                            Utworzono
+                        </th>
+                        <th>
+                            Nazwa
+                        </th>
+                        <th>
+                            Prowadzący
+                        </th>
+                    </tr>
+                    @foreach (var group in Model.Groups)
                 {
                     var teacher = group.UsersGroups.Where(ug => !ug.IsDeleted && ug.User.RoleId == (int)Consts.Roles.Teacher).FirstOrDefault().User;
-                    <tr>
-                        <td>
-                            @group.CreationDate.ToString("yyyy/MM/dd")
-                        </td>
-                        <td>
-                            @Html.ActionLink(group.Name, "FullDetails", "Group", new { id = group.Id }, null)
-                        </td>
-                        <td>
-                            @teacher.UserData.FirstOrDefault().Name @teacher.UserData.FirstOrDefault().Surname (@teacher.Login)
-                        </td>
-                    </tr>
-                }
-            </table>
+                        <tr>
+                            <td>
+                                @group.CreationDate.ToString("yyyy/MM/dd")
+                            </td>
+                            <td>
+                                @Html.ActionLink(group.Name, "FullDetails", "Group", new { id = group.Id }, null)
+                            </td>
+                            <td>
+                                @teacher.UserData.FirstOrDefault().Name @teacher.UserData.FirstOrDefault().Surname (@teacher.Login)
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
         </div>
     }
 </div>
