--- a/LanguageSchool/Views/Group/Create.cshtml
+++ b/LanguageSchool/Views/Group/Create.cshtml
@@ -15,45 +15,47 @@
 
     <div class="container">
         @{ Html.RenderPartial("_PartHeader", "Dodaj grupę - " + Model.CourseName); }
-        <div class="row form-horizontal thumbnail col-md-12">
-            <div class="col-md-6">
-                <div class="form-group">
-                    <div class="control-label col-md-4">
-                        <strong>Nazwa</strong>
+        <div class="row form-horizontal">
+            <div class="bordered col-md-12">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="control-label col-md-4">
+                            <strong>Nazwa</strong>
+                        </div>
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        </div>
                     </div>
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="control-label col-md-4">
-                        <strong>Prowadzący</strong>
-                    </div>
-                    <div class="col-md-8">
-                        @Html.DropDownListFor(model => model.UserId, Model.Users, new { @class = "form-control" })
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="form-group">
-                    <div class="control-label col-md-4">
-                        <strong>Data rozpoczęcia</strong>
-                    </div>
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="control-label col-md-4">
+                            <strong>Prowadzący</strong>
+                        </div>
+                        <div class="col-md-8">
+                            @Html.DropDownListFor(model => model.UserId, Model.Users, new { @class = "form-control" })
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <div class="control-label col-md-4">
+                            <strong>Data rozpoczęcia</strong>
+                        </div>
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-                <div class="form-group">
-                    <div class="control-label col-md-4">
-                        <strong>Data zakończenia</strong>
-                    </div>
-                    <div class="col-md-8">
-                        @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="control-label col-md-4">
+                            <strong>Data zakończenia</strong>
+                        </div>
+                        <div class="col-md-8">
+                            @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
             </div>
