--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -7,45 +7,47 @@
 
 <div class="container">
     @{ Html.RenderPartial("_PartHeader", "Dane grupy"); }
-    <div class="row thumbnail col-md-12">
-        <div class="row">
-            <div class="col-md-3">
-                <label>
-                    Nazwa
-                </label>
-            </div>
+    <div class="row">
+        <div class="bordered col-md-12">
+            <div class="row">
+                <div class="col-md-3">
+                    <label>
+                        Nazwa
+                    </label>
+                </div>
 
-            <div class="col-md-3">
-                @Html.DisplayFor(model => model.Name)
-            </div>
+                <div class="col-md-3">
+                    @Html.DisplayFor(model => model.Name)
+                </div>
 
-            <div class="col-md-3">
-                <label>
-                    Prowadzący
-                </label>
+                <div class="col-md-3">
+                    <label>
+                        Prowadzący
+                    </label>
+                </div>
+                <div class="col-md-3">
+                    @Html.DisplayFor(model => model.Teacher.Fullname)
+                </div>
             </div>
-            <div class="col-md-3">
-                @Html.DisplayFor(model => model.Teacher.Fullname)
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                <label>
-                    Data rozpoczęcia
-                </label>
-            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <label>
+                        Data rozpoczęcia
+                    </label>
+                </div>
 
-            <div class="col-md-3">
-                @Html.DisplayFor(model => model.StartDate)
-            </div>
+                <div class="col-md-3">
+                    @Html.DisplayFor(model => model.StartDate)
+                </div>
 
-            <div class="col-md-3">
-                <label>
-                    Data zakończenia
-                </label>
-            </div>
-            <div class="col-md-3">
-                @Html.DisplayFor(model => model.EndDate)
+                <div class="col-md-3">
+                    <label>
+                        Data zakończenia
+                    </label>
+                </div>
+                <div class="col-md-3">
+                    @Html.DisplayFor(model => model.EndDate)
+                </div>
             </div>
         </div>
     </div>
@@ -60,54 +62,58 @@
         </div>
     </div>
     @{ Html.RenderPartial("_PartHeader", "Godziny zajęć"); }
-    <div class="row thumbnail col-md-12">
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>
-                    Dzień
-                </th>
-                <th>
-                    Godziny
-                </th>
-            </tr>
-            @foreach (var groupTime in Model.Hours)
-            {
-                <tr>
-                    <td>
-                        @groupTime.DayOfWeek.PLName
-                    </td>
-                    <td>
-                        @groupTime.StartTime.15 - @(groupTime.EndTime + 1).15
-                    </td>
-                </tr>
-            }
-        </table>
-    </div>
-    @if (Model.Students.Any())
-    {
-        Html.RenderPartial("_PartHeader", "Zapisani studenci");
-        <div class="row thumbnail col-md-12">
+    <div class="row">
+        <div class="bordered col-md-12">
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
-                        Zapisano
+                        Dzień
                     </th>
                     <th>
-                        Student
+                        Godziny
                     </th>
                 </tr>
-                @foreach (var student in Model.Students)
+                @foreach (var groupTime in Model.Hours)
                 {
                     <tr>
                         <td>
-                            @student.CreationDate
+                            @groupTime.DayOfWeek.PLName
                         </td>
                         <td>
-                            @student.Fullname
+                            @groupTime.StartTime.15 - @(groupTime.EndTime + 1).15
                         </td>
                     </tr>
                 }
             </table>
+        </div>
+    </div>
+    @if (Model.Students.Any())
+    {
+        Html.RenderPartial("_PartHeader", "Zapisani studenci");
+        <div class="row">
+            <div class="bordered col-md-12">
+                <table class="table table-striped table-bordered">
+                    <tr>
+                        <th>
+                            Zapisano
+                        </th>
+                        <th>
+                            Student
+                        </th>
+                    </tr>
+                    @foreach (var student in Model.Students)
+                    {
+                        <tr>
+                            <td>
+                                @student.CreationDate
+                            </td>
+                            <td>
+                                @student.Fullname
+                            </td>
+                        </tr>
+                    }
+                </table>
+            </div>
         </div>
     }
     <div class="row col-md-12">
