--- a/LanguageSchool/Views/Material/Index.cshtml
+++ b/LanguageSchool/Views/Material/Index.cshtml
@@ -5,44 +5,46 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container thumbnail">
-    <table class="table table-striped table-bordered">
-        <tr>
-            <th>
-                Data utworzenia
-            </th>
-            <th>
-                Temat
-            </th>
-            <th>
-                Nazwa
-            </th>
-            <th>
-                Komentarz
-            </th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
+<div class="container">
+    <div class="bordered col-md-12">
+        <table class="table table-striped table-bordered">
             <tr>
-                <td>
-                    @item.CreationDate.ToString("yyyy/MM/dd")
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LessonSubject.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Comment)
-                </td>
-                <td>
-                    <a href="@Url.Action("Download", "Material", new { id = item.Id })" style = "color:black">
-                        <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
-                    </a>
-                </td>
+                <th>
+                    Data utworzenia
+                </th>
+                <th>
+                    Temat
+                </th>
+                <th>
+                    Nazwa
+                </th>
+                <th>
+                    Komentarz
+                </th>
             </tr>
-        }
-    </table>
+
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @item.CreationDate.ToString("yyyy/MM/dd")
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.LessonSubject.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Name)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Comment)
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Download", "Material", new { id = item.Id })" style="color:black">
+                            <span class="glyphicon glyphicon-download" aria-hidden="true"></span>
+                        </a>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 </div>
