--- a/LanguageSchool/Views/Question/Index.cshtml
+++ b/LanguageSchool/Views/Question/Index.cshtml
@@ -6,104 +6,100 @@
 }
 
 <div class="container">
-    <div class="row col-md-12">
-        <div class="thumbnail col-md-4">
-            <strong>Pytania otwarte</strong>
-        </div>
-    </div>
-    <div class="thumbnail row col-md-12">
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>
-                    Utworzono
-                </th>
-                <th>
-                    Treść
-                </th>
-                <th>
-                    Punkty
-                </th>
-            </tr>
-
-            @foreach (var openQuestion in Model.OpenQuestions)
-            {
+    @{ Html.RenderPartial("_PartHeader", "Pytania otwarte"); }
+    <div class="row">
+        <div class="bordered col-md-12">
+            <table class="table table-striped table-bordered">
                 <tr>
-                    <td>
-                        @openQuestion.CreationDate.ToString("yyyy/MM/dd")
-                    </td>
-                    <td>
-                        @Html.DisplayFor(cq => openQuestion.Contents)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(cq => openQuestion.Points)
-                    </td>
+                    <th>
+                        Utworzono
+                    </th>
+                    <th>
+                        Treść
+                    </th>
+                    <th>
+                        Punkty
+                    </th>
                 </tr>
-            }
-        </table>
+
+                @foreach (var openQuestion in Model.OpenQuestions)
+                {
+                    <tr>
+                        <td>
+                            @openQuestion.CreationDate.ToString("yyyy/MM/dd")
+                        </td>
+                        <td>
+                            @Html.DisplayFor(cq => openQuestion.Contents)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(cq => openQuestion.Points)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
     </div>
     <div class="row col-md-12">
         <div class="col-md-3" style="float:right">
             <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("CreateOpen", "Question", new { lessonSubjectId = Model.LessonSubjectId })'">Utwórz nowe</button>
         </div>
     </div>
-    <div class="row col-md-12">
-        <div class="thumbnail col-md-4">
-            <strong>Pytania zamknięte</strong>
-        </div>
-    </div>
-    <div class="thumbnail row col-md-12">
-        <table class="table table-striped table-bordered">
-            <tr>
-                <th>
-                    Utworzono
-                </th>
-                <th>
-                    Treść
-                </th>
-                <th>
-                    Punkty
-                </th>
-                <th>
-                    Odpowiedzi
-                </th>
-            </tr>
-
-            @foreach (var closedQuestion in Model.ClosedQuestions)
-            {
-                var questionAnswers = closedQuestion.Answers.Where(a => !a.IsDeleted).ToList();
-
+    @{ Html.RenderPartial("_PartHeader", "Pytania zamknięte"); }
+    <div class="row">
+        <div class="bordered col-md-12">
+            <table class="table table-striped table-bordered">
                 <tr>
-                    <td>
-                        @closedQuestion.CreationDate.ToString("yyyy/MM/dd")
-                    </td>
-                    <td>
-                        @Html.DisplayFor(cq => closedQuestion.Contents)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(cq => closedQuestion.Points)
-                    </td>
-                    <td>
-                        <ul>
-                        @foreach (var answer in questionAnswers)
-                        {
-                            if (answer.IsCorrect)
-                            {
-                                <li style="color:forestgreen">
-                                    @answer.AnswerContent
-                                </li>
-                            }
-                            else
-                            {
-                                <li>
-                                    @answer.AnswerContent
-                                </li>
-                            }
-                        }
-                        </ul>
-                    </td>
+                    <th>
+                        Utworzono
+                    </th>
+                    <th>
+                        Treść
+                    </th>
+                    <th>
+                        Punkty
+                    </th>
+                    <th>
+                        Odpowiedzi
+                    </th>
                 </tr>
-            }
-        </table>
+
+                @foreach (var closedQuestion in Model.ClosedQuestions)
+                {
+                    var questionAnswers = closedQuestion.Answers.Where(a => !a.IsDeleted).ToList();
+
+                    <tr>
+                        <td>
+                            @closedQuestion.CreationDate.ToString("yyyy/MM/dd")
+                        </td>
+                        <td>
+                            @Html.DisplayFor(cq => closedQuestion.Contents)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(cq => closedQuestion.Points)
+                        </td>
+                        <td>
+                            <ul>
+                                @foreach (var answer in questionAnswers)
+                                {
+                                    if (answer.IsCorrect)
+                                    {
+                                        <li style="color:forestgreen">
+                                            @answer.AnswerContent
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li>
+                                            @answer.AnswerContent
+                                        </li>
+                                    }
+                                }
+                            </ul>
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
     </div>
     <div class="row col-md-12">
         <div class="col-md-3" style="float:right">
